--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,8 +12,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="15sp"
+        android:text="@string/town"
         android:textAlignment="center"
-        android:text="Minsk"
         android:textSize="36sp" />
 
     <LinearLayout
@@ -25,8 +25,9 @@
             android:id="@+id/imageView2"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_gravity="center|end"
             android:layout_weight="1"
-            android:layout_gravity="center"
+            android:contentDescription="@string/sunny_weather"
             app:srcCompat="@drawable/sunny" />
 
         <TextView
@@ -35,9 +36,25 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_weight="1"
-            android:text="13°"
+            android:text="@string/weather_now_degree"
             android:textSize="80sp" />
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="@string/weather_now_feel"
+        android:textSize="26sp" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="@string/weather_now"
+        android:textSize="26sp" />
 
 
 </LinearLayout>
