--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
         android:paddingTop="15sp"
         android:text="@string/town"
         android:textAlignment="center"
-        android:textSize="36sp" />
+        android:textSize="30sp" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -37,7 +37,7 @@
             android:layout_gravity="center_vertical"
             android:layout_weight="1"
             android:text="@string/weather_now_degree"
-            android:textSize="80sp" />
+            android:textSize="74sp" />
     </LinearLayout>
 
     <TextView
@@ -46,7 +46,7 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:text="@string/weather_now_feel"
-        android:textSize="26sp" />
+        android:textSize="20sp" />
 
     <TextView
         android:id="@+id/textView"
@@ -54,7 +54,66 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:text="@string/weather_now"
-        android:textSize="26sp" />
+        android:textSize="20sp" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="65dp"
+        android:orientation="horizontal"
+        android:background="@drawable/rounded"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="30dp">
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:gravity="center"
+            android:layout_weight="1">
+
+            <TextView
+                android:id="@+id/textView4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="@string/fallout" />
+
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="@string/number_of_fallout" />
+        </LinearLayout>
+
+        <View
+            android:layout_width="1dp"
+            android:layout_height="65dp"
+            android:background="#F0E6E6"/>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:gravity="center"
+            android:layout_weight="1">
+
+            <TextView
+                android:id="@+id/textView8"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="@string/wind_speed" />
+
+            <TextView
+                android:id="@+id/textView7"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="@string/number_wind_speed" />
+        </LinearLayout>
+    </LinearLayout>
 
 
 </LinearLayout>
