--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -300,10 +300,10 @@
 
     <ImageButton
         android:id="@+id/imageButton_refresh"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         android:layout_alignParentRight="true"
         android:layout_marginTop="10dp"
-        android:layout_marginRight="40dp"
-        app:srcCompat="@drawable/refresh" />
+        android:layout_marginRight="30dp"
+        android:background="@drawable/refresh"/>
 </RelativeLayout>
